# gerador-conteudo

./: .gitignore  AJUSTES_FINAIS_TIKTOK.md  CAMPOS_TIKTOK_RESUMO.md  COMO_OBTER_LINKEDIN_URN.md  COMO_OBTER_TIKTOK_TOKENS.md  COMO_USAR_LINKEDIN.md  CONFIGURAR_GEMINI.md  CONFIGURAR_TIKTOK_RAPIDO.md  CORRECAO_ERRO_416_ZOOM.md  CORRECOES_TIKTOK_GEMINI.md  CORRIGIR_REDIRECT_URI_LINKEDIN.md  ENTENDENDO_OS_LOGS.md  EXECUTAR_NOVAMENTE.md  GUIA_CONEXAO_LINKEDIN.md  GUIA_CONFIGURACAO_APIS.md  GUIA_CONFIGURACAO_TIKTOK.md  HABILITAR_OPENID_LINKEDIN.md  LINKEDIN_IMPLEMENTACAO.md  MELHORIAS_QUALIDADE_VIDEO.md  PASSO_A_PASSO_LINKEDIN.md  PASSO_A_PASSO_TIKTOK_PORTAL.md  PRIVACY.md  PRONTO_TIKTOK_CONFIGURADO.md  README.md  README_COMPLETO.md  RESUMO_MIGRACAO_GEMINI.md  SETUP_APIS.md  SOLUCAO_ERRO_BILLING.md  SOLUCAO_ERRO_REDIRECT_URI_TIKTOK.md  SOLUCAO_PORTA_LINKEDIN.md  SOLUCAO_REDIRECT_URI.md  SOLUCAO_TIKTOK_UNAUDITED.md  TERMS.md  TESTAR_LINKEDIN.md  TIKTOK_GERACAO_AUTOMATICA.md  VERIFICAR_TIKTOK_PORTAL.md  app_label.py  docker-compose.yml  env.example  env.sem-aws.example  (+6 more)
.streamlit/: secrets.toml
apps/: __init__.py
backend/: .env  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: companies.py  onboarding.py  onboarding_ai.py  profile.py
backend/app/core/: config.py  prompts.py
backend/app/db/: base.py  session.py
backend/app/models/: company.py  qa.py
backend/app/schemas/: company.py  qa.py
backend/app/services/: ollama_client.py  onboarding_ai_service.py  profile_service.py  qa_service.py
backfill_out/: decisions.csv  historical_top.csv
database/: __init__.py  models.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/features/onboarding/: OnboardingPage.tsx  useOnboardingFlow.ts
frontend/src/lib/: api.ts
labeling/: labels.csv  to_label.csv
pocs/: README_RSS_FEEDS.md  __init__.py  exemplo_poc.py  instagram_poc.py  linkedin_poc.py  moviepy_poc.py  pexelsAPI_poc.py  rss_feeds_poc.py  template_poc.py  tiktok_poc.py
pocs/ai_generation/: __init__.py  gemini_image_poc.py  openai_image_poc.py
pocs/metrics/: __init__.py  social_metrics_poc.py
pocs/storage/: __init__.py  aws_s3_poc.py
scripts/: __init__.py  create_test_video.py  get_instagram_token.py  get_linkedin_token.py  get_linkedin_urn.py  get_tiktok_token.py  run_poc.py  run_streamlit.py  setup_project.py  setup_social_apis.py  start_local_server.py  test_social_apis.py
storage/: __init__.py
tests/: test_exemplo_poc.py  test_rss_feeds_poc.py
web_interface/: __init__.py  streamlit_app.py
